replaced id with username in controller and html files

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/errorPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/errorPage.html
@@ -9,7 +9,7 @@
 <h>Your action failed</h>
 <dr>
    <div Reason : th:text="${error}">0</div>
-<a th:href="@{/{id}(id = ${id})}" role="button">overview</a>
+<a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
 </dr>
 </body>
 </html>
