--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/lendingRequest.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/lendingRequest.html
@@ -6,7 +6,7 @@
     <title>Formular</title>
 </head>
 <body>
-<form action="/inquiry" method="post">
+<form action="/Lending/inquiry" method="post">
     <label>
         from :
         <input type="date" name="startDate">
