--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/povertyPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/povertyPage.html
@@ -8,7 +8,7 @@
 <body>
 <h>Sorry, that you live in POVERTY you beggar</h>
 <dr>
-<a th:href="@{/{id}(id = ${id})}" role="button">overview</a>
+<a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
 </dr>
 </body>
 </html>
