--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/transactionsPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/transactionsPage.html
@@ -36,7 +36,7 @@ financial income
     </div>
 </table>
 <dr>
-<a th:href="@{/{id}(id = ${id})}" role="button">overview</a>
+<a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
 </dr>
 </body>
 </html>
