--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/conflictPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/conflictPage.html
@@ -41,7 +41,7 @@
     </div>
 </table>
 <dr>>
-<a th:href="@{/{id}(id = ${id})}" role="button">overview</a>
+<a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
 </dr>
 </body>
 </html>
