--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewBorrows.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewBorrows.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <dr>
-    <a th:href="@{/{id}(id = ${id})}" role="button">overview</a>
+    <a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
 </dr>
 <p> Sie bieten zur Ausleihe an !</p>
 <table th:each="article : ${articles}">
