fix images in Article class

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewAll.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewAll.html
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <td>Artikelbild</td>
-                    <td> <img th:src="@{/image/{id} (id = ${article.getImage().get(0).getImageID()})}" width="200px" height=auto/></td>
+                    <td> <img th:src="@{/image/{id} (id = ${article.getImageID()})}" width="200px" height=auto/></td>
                 </tr>
                 <tr>
                     <td>Mietpreis:</td>
