Fixes a small Link

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
@@ -34,7 +34,7 @@
                     </table>
                 </div>
             </div>
-        <a th:href="|/article/new/${id}|"><button class="btn btn-primary" type="button">Neuen Artikel anlegen</button></a>
+        <a th:href="|/article/new/|"><button class="btn btn-primary" type="button">Neuen Artikel anlegen</button></a>
     </div>
 </body>
 
