Fixes Dead Links, reaktivates Databaseinitializer

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
@@ -13,14 +13,13 @@
     <div class="container">
         <h1 class="display-3">Übersicht</h1>
         <div class="row mb-2">
-                <div class="col-md-6">
+            <div class="col-md-6"  th:each="article:${articles}">
                     <table class="table table-hover">
                         <tr>
                             <td>Artikel:</td>
                             <td th:text="${article.getName()}"></td>
                         </tr>
-                        <!-- Hier if einfügen für default Bild-->
-                        <tr th:each="image:${article.getImage()}">
+                        <tr>
                             <td>Artikelbild</td>
                             <td> <img th:src="@{/image/{id} (id = ${article.getImageID()})}" width="200px" height=auto/></td>
                         </tr>
