--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/conflict/conflict-admin-case.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/conflict/conflict-admin-case.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="de" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Dein Konto - Rhinoshare</title>
+    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="icon" href="/img/RhinoLogoSmall.png">
 </head>
+<body>
+<img id="titleImageTest" src="/img/rhinoLogoBig.png" width="300" height="75">
+<ul class="navigationbar">
+    <li class="navbaritem"><a href="/">Rhino-Übersicht</a></li>
+    <li class="navbaritem"><a href="/">News</a></li>
+    <li class="navbaritem"><a href="/artikel/">Artikel</a></li>
+
+    <li class="navbaritem"><a href="/rent">Ausleihen</a></li>
+    <li class="navbaritem"><a href="/">Contact</a></li>
+    <li class="navbaritem" href th:if="${loggedIn == 'false'}">
+        <a href="/newaccount">Registrieren</a>
+    </li>
+    <li class="navbaritem" href th:if="${loggedIn == 'true'}">
+        <a class="active" href="/edit" th:text="${surname}">Benutzer</a>
+    </li>
+    <li class="navbaritem"><input id="globalSearchField" type="text" placeholder="Suchen..."></li>
+    <li class="navbaritem"><a href="/">Suchen</a></li>
+    <li style="float: right;" class="navbaritem" href th:if="${loggedIn == 'false'}">
+        <a href="/login">Einloggen</a>
+    </li>
+    <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
+        <a href="/logout">Ausloggen</a>
+    </li>
+    <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
+        <a href="/openConflict">Open Conflict</a>
+    </li>
+</ul>
+<body>
 <body>
 
 <div class="jumbotron text-center">
