--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/conflict/conflictUserOpen.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/conflict/conflictUserOpen.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="de" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Dein Konto - Rhinoshare</title>
+    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="icon" href="/img/RhinoLogoSmall.png">
 </head>
+<body>
+<img id="titleImageTest" src="/img/rhinoLogoBig.png" width="300" height="75">
+<ul class="navigationbar">
+    <li class="navbaritem"><a href="/">Rhino-Übersicht</a></li>
+    <li class="navbaritem"><a href="/">News</a></li>
+    <li class="navbaritem"><a href="/artikel/">Artikel</a></li>
+
+    <li class="navbaritem"><a href="/rent">Ausleihen</a></li>
+    <li class="navbaritem"><a href="/">Contact</a></li>
+    <li class="navbaritem" href th:if="${loggedIn == 'false'}">
+        <a href="/newaccount">Registrieren</a>
+    </li>
+    <li class="navbaritem" href th:if="${loggedIn == 'true'}">
+        <a class="active" href="/edit" th:text="${surname}">Benutzer</a>
+    </li>
+    <li class="navbaritem"><input id="globalSearchField" type="text" placeholder="Suchen..."></li>
+    <li class="navbaritem"><a href="/">Suchen</a></li>
+    <li style="float: right;" class="navbaritem" href th:if="${loggedIn == 'false'}">
+        <a href="/login">Einloggen</a>
+    </li>
+    <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
+        <a href="/logout">Ausloggen</a>
+    </li>
+    <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
+        <a href="/openConflict">Open Conflict</a>
+    </li>
+</ul>
 <body>
 
 <div class="jumbotron text-center">
@@ -17,6 +42,9 @@
 <form method="post">
     <div class="container">
         <div class="form-group">
+            <p></p>
+            <p th:text="${error} + ''"/>
+            <p></p>
             <label> Lending ID</label>
             <input th:name="lendingID" class="form-control" type="number" min="0" required="requiredd" placeholder="insert lendingID">
         </div>
@@ -25,7 +53,6 @@
             <textarea th:name="description" class="form-control" required="required" id="conflictTextarea" rows="5"
                       placeholder="Describe your conflict here as precise as possible"></textarea>
         <div class="align-right">
-            <input type="submit" value="back" name="action">
             <input type="submit" value="open" name="action">
         </div>
         </div>
