--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
@@ -16,9 +16,9 @@
             <h1 th:text="${article.getName()}">SampleName</h1>
             <table>
                 <!-- Hier if einfügen für default Bild-->
-                <tr th:each="image:${article.getImage()}">
+                <tr th:if="${article.image != null}">
                     <td>Artikelbild</td>
-                    <td> <img th:src="@{/image/{id} (id = ${image.getImageID()})}" width=auto height="300"/></td>
+                    <td> <img th:src="@{/image/{id} (id = ${article.getImageID()})}" width=auto height="300"/></td>
                 </tr>
                 <tr>
                     <td>Beschreibung:</td>
