--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/searchArticle.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/searchArticle.html
@@ -21,7 +21,7 @@
                     <td>Artikel:</td>
                     <td th:text="${article.getName()}"></td>
                 </tr>
-                <tr>
+                <tr th:if="${article.image != null}">
                     <td>Artikelbild</td>
                     <td> <img th:src="@{/image/{id} (id = ${article.getImage().get(0).getImageID()})}" width="200px" height=auto/></td>
                 </tr>
