--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
@@ -19,7 +19,7 @@
                             <td>Artikel:</td>
                             <td th:text="${article.getName()}"></td>
                         </tr>
-                        <tr>
+                        <tr th:if="${article.image != null}">
                             <td>Artikelbild</td>
                             <td> <img th:src="@{/image/{id} (id = ${article.getImageID()})}" width="200px" height=auto/></td>
                         </tr>
