--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/deleteArticle.html
@@ -32,9 +32,20 @@
                     <td>Mietpreis</td>
                     <td th:text="${article.getRent()} +'€'">SampleRent</td>
                 </tr>
+                <tr th:if="${article.forSale == true}">
+                    <td>Verkaufspreis</td>
+                    <td th:text="${article.getSellingPrice()} +'€'">SamplePrice</td>
+                </tr>
                 <tr>
                     <td>Verfügbarkeit</td>
                     <td th:switch="${article.isAvailable()}">
+                        <span th:case="true"><i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
+                        <span th:case="false"><i class="fa fa-times-circle-o" aria-hidden="true"></i></span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Zum Verkauf?</td>
+                    <td th:switch="${article.isForSale()}">
                         <span th:case="true"><i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
                         <span th:case="false"><i class="fa fa-times-circle-o" aria-hidden="true"></i></span>
                     </td>
