--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewLendings.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewLendings.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html >
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <meta charset="UTF-8">
+    <link rel="icon" href="/img/RhinoLogoSmall.png">    <meta charset="UTF-8">
     <title>Ausgeliehene Geräte</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
         <h3>comment =</h3>
         <div th:text="${lending.lendedArticle.comment}">0</div>
         <h3>Person you are borrowing from =</h3>
-        <div th:text="${lending.lendedArticle.ownerUser.name}">0</div>
+        <div th:text="${lending.lendedArticle.owner.name}">0</div>
         <h3>Deposit =</h3>
         <div th:text="${lending.lendedArticle.deposit}">0</div>
         <h3>Rent =</h3>
