--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_articlemanagement.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_articlemanagement.html
@@ -11,9 +11,9 @@
 <ul class="navigationbar">
     <li class="navbaritem"><a href="/admin">Überblick</a></li>
     <li class="navbaritem">
-        <a class="active" href="/admin/usermanagement">Benutzerverwaltung</a>
+        <a href="/admin/usermanagement">Benutzerverwaltung</a>
     </li>
-    <li class="navbaritem"><a href="/admin/articlemanagement">Artikelverwaltung</a></li>
+    <li class="navbaritem"><a class="active" href="/admin/articlemanagement">Artikelverwaltung</a></li>
     <li class="navbaritem"><a href="/admin/lendingmanagement">Ausleihen</a></li>
     <li class="navbaritem"><a href="/admin">Konfliktlösung</a></li>
     <li class="navbaritem"><a href="/">Hauptseite</a></li>
@@ -21,32 +21,22 @@
         <a href="/logout">Ausloggen</a>
     </li>
 </ul>
-<div>
-    <a href="/admin/usermanagement/add"><button class="button_std">Neuer Benutzer</button></a>
-</div>
 <table id="useroverview">
     <th>ID</th>
-    <th>Name</th>
-    <th>Vorname</th>
-    <th>RhinoID</th>
-    <th>Email</th>
-    <th>Score</th>
-    <th>Berechtigungen</th>
+    <th>Artikel</th>
+    <th>Besitzer</th>
+    <th>Kaution</th>
+    <th>Mietkosten</th>
     <th>Aktion</th>
-    <th:block th:each="user : ${userlist}">
+    <th:block th:each="article : ${articles}">
         <tr>
-            <td th:text="${user.userID}">...</td>
-            <td th:text="${user.name}">...</td>
-            <td th:text="${user.surname}">...</td>
-            <td th:text="${user.username}">...</td>
-            <td th:text="${user.email}">...</td>
-            <td th:text="${user.score}">...</td>
-            <td th:text="${user.role}">...</td>
+            <td th:text="${article.articleID}">...</td>
+            <td th:text="${article.name}">...</td>
+            <td th:text="${article.owner.getUsername()}">...</td>
+            <td th:text="${article.deposit}">...</td>
+            <td th:text="${article.rent}">...</td>
             <td>
-                <a th:href="|/admin/usermanagement/edit/${user.getUserID()}|">
-                    <button class="button_std_white">Bearbeiten</button>
-                </a>
-                <a th:href="|/admin/usermanagement/delete/${user.getUserID()}|">
+                <a th:href="|/admin/articlemanagement/delete/${article.getArticleID()}|">
                     <button class="button_std">Löschen</button>
                 </a>
             </td>
