--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_lendingmanagement.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_lendingmanagement.html
@@ -11,42 +11,36 @@
 <ul class="navigationbar">
     <li class="navbaritem"><a href="/admin">Überblick</a></li>
     <li class="navbaritem">
-        <a class="active" href="/admin/usermanagement">Benutzerverwaltung</a>
+        <a href="/admin/usermanagement">Benutzerverwaltung</a>
     </li>
     <li class="navbaritem"><a href="/admin/articlemanagement">Artikelverwaltung</a></li>
-    <li class="navbaritem"><a href="/admin/lendingmanagement">Ausleihen</a></li>
+    <li class="navbaritem"><a class="active" href="/admin/lendingmanagement">Ausleihen</a></li>
     <li class="navbaritem"><a href="/admin">Konfliktlösung</a></li>
     <li class="navbaritem"><a href="/">Hauptseite</a></li>
     <li style="float: right" class="navbaritem">
         <a href="/logout">Ausloggen</a>
     </li>
 </ul>
-<div>
-    <a href="/admin/usermanagement/add"><button class="button_std">Neuer Benutzer</button></a>
-</div>
 <table id="useroverview">
     <th>ID</th>
-    <th>Name</th>
-    <th>Vorname</th>
-    <th>RhinoID</th>
-    <th>Email</th>
-    <th>Score</th>
-    <th>Berechtigungen</th>
+    <th>Artikel</th>
+    <th>Startdatum</th>
+    <th>Enddatum</th>
+    <th>Verkiehen an</th>
+    <th>Besitzer</th>
+    <th>Bemerkung</th>
     <th>Aktion</th>
-    <th:block th:each="user : ${userlist}">
+    <th:block th:each="lending : ${lendings}">
         <tr>
-            <td th:text="${user.userID}">...</td>
-            <td th:text="${user.name}">...</td>
-            <td th:text="${user.surname}">...</td>
-            <td th:text="${user.username}">...</td>
-            <td th:text="${user.email}">...</td>
-            <td th:text="${user.score}">...</td>
-            <td th:text="${user.role}">...</td>
+            <td th:text="${lending.lendingID}">...</td>
+            <td th:text="${lending.lendedArticle.getName()}">...</td>
+            <td th:text="${lending.formattedStartDate}">...</td>
+            <td th:text="${lending.formattedEndDate}">...</td>
+            <td th:text="${lending.lendingPerson.getUsername()}">...</td>
+            <td th:text="${lending.lendedArticle.getOwner().getUsername()}">...</td>
+            <td th:text="${lending.warning}">...</td>
             <td>
-                <a th:href="|/admin/usermanagement/edit/${user.getUserID()}|">
-                    <button class="button_std_white">Bearbeiten</button>
-                </a>
-                <a th:href="|/admin/usermanagement/delete/${user.getUserID()}|">
+                <a th:href="|/admin/lendingmanagement/delete/${lending.getLendingID()}|">
                     <button class="button_std">Löschen</button>
                 </a>
             </td>
