--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/errorPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/errorPage.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="icon" href="/img/RhinoLogoSmall.png">    <meta charset="UTF-8">
     <title>Error</title>
 </head>
 <body>
 <h>Your action failed</h>
-<dr>
-   <div Reason : th:text="${error}">0</div>
-<a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
-</dr>
+<div>
+    Reason =
+   <div th:text="${error}">0</div>
+    <a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
+</div>
 </body>
 </html>
