changed the view for conflicthandling in admin-section

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_lendingmanagement.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_lendingmanagement.html
@@ -15,7 +15,7 @@
     </li>
     <li class="navbaritem"><a href="/admin/articlemanagement">Artikelverwaltung</a></li>
     <li class="navbaritem"><a class="active" href="/admin/lendingmanagement">Ausleihen</a></li>
-    <li class="navbaritem"><a href="/admin">Konfliktlösung</a></li>
+    <li class="navbaritem"><a href="/admin/conflicthandling">Konfliktlösung</a></li>
     <li class="navbaritem"><a href="/">Hauptseite</a></li>
     <li style="float: right" class="navbaritem">
         <a href="/logout">Ausloggen</a>
