--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_conflicthandlingdetails.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_conflicthandlingdetails.html
@@ -2,27 +2,26 @@
 <html lang="de" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Administration - Rhinoshare</title>
+    <title>Benutzerverwaltung - Rhinoshare</title>
     <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
     <link rel="icon" href="/img/RhinoLogoSmall.png">
 </head>
 <body>
 <img id="titleImageTest" src="/img/rhinoLogoBigAdmin.png" width="300" height="75">
 <ul class="navigationbar">
-    <li class="navbaritem"><a class="active" href="/admin">Überblick</a></li>
+    <li class="navbaritem"><a href="/admin">Überblick</a></li>
     <li class="navbaritem">
         <a href="/admin/usermanagement">Benutzerverwaltung</a>
     </li>
     <li class="navbaritem"><a href="/admin/articlemanagement">Artikelverwaltung</a></li>
     <li class="navbaritem"><a href="/admin/lendingmanagement">Ausleihen</a></li>
-    <li class="navbaritem"><a href="/admin/conflicthandling">Konfliktlösung</a></li>
+    <li class="navbaritem"><a class="active" href="/admin/conflicthandling">Konfliktlösung</a></li>
     <li class="navbaritem"><a href="/">Hauptseite</a></li>
     <li style="float: right" class="navbaritem">
         <a href="/logout">Ausloggen</a>
     </li>
 </ul>
-</ul>
-<h1>ADMIN</h1>
+
 
 </body>
 </html>
